<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/reference"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="com.humblepotato2.packagesigner.Reference">

    <include layout="@layout/toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="70dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ack_kellinwood"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:textSize="16sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/ack_zipSignerDesc"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/ack_appium"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:textSize="16sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/ack_signApkDesc"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
